# api/docs/swagger.yaml
@@ -14,6 +14,8 @@ definitions:
         type: integer
       last_name:
         type: string
+      type:
+        type: string
       username:
         type: string
     type: object
@@ -21,28 +23,32 @@ definitions:
     properties:
       created_at:
         type: string
+      from_date:
+        type: string
+      hotel_id:
+        type: integer
       id:
         type: integer
-      number_of_users:
-        type: integer
+      price:
+        type: number
       room_id:
         type: integer
-      stay:
-        type: string
-      stay_date:
+      to_date:
         type: string
       user_id:
         type: integer
     type: object
   models.CreateBookingRequest:
     properties:
-      number_of_users:
+      from_date:
+        type: string
+      hotel_id:
         type: integer
+      price:
+        type: number
       room_id:
         type: integer
-      stay:
-        type: string
-      stay_date:
+      to_date:
         type: string
       user_id:
         type: integer
@@ -55,48 +61,16 @@ definitions:
         type: string
       hotel_name:
         type: string
-      hotel_rating:
-        type: string
       number_of_rooms:
         type: integer
-      owner_id:
+      user_id:
         type: integer
     required:
     - hotel_image_url
     - hotel_location
     - hotel_name
-    - hotel_rating
     - number_of_rooms
-    - owner_id
-    type: object
-  models.CreateOwnerRequest:
-    properties:
-      email:
-        type: string
-      first_name:
-        maxLength: 30
-        minLength: 2
-        type: string
-      last_name:
-        maxLength: 30
-        minLength: 2
-        type: string
-      password:
-        maxLength: 16
-        minLength: 6
-        type: string
-      phone_number:
-        type: string
-      username:
-        maxLength: 30
-        minLength: 2
-        type: string
-    required:
-    - email
-    - first_name
-    - last_name
-    - password
-    - username
+    - user_id
     type: object
   models.CreateRoomRequest:
     properties:
@@ -104,11 +78,7 @@ definitions:
         type: integer
       number_of_room:
         type: integer
-      price:
-        type: number
       room_image_url:
-        type: string
-      sleeps:
         type: string
       status:
         type: string
@@ -132,6 +102,8 @@ definitions:
         minLength: 6
         type: string
       phone_number:
+        type: string
+      type:
         type: string
       username:
         maxLength: 30
@@ -174,15 +146,6 @@ definitions:
           $ref: '#/definitions/models.Hotel'
         type: array
     type: object
-  models.GetAllOwnersResponse:
-    properties:
-      count:
-        type: integer
-      owners:
-        items:
-          $ref: '#/definitions/models.Owner'
-        type: array
-    type: object
   models.GetAllRoomsResponse:
     properties:
       count:
@@ -211,13 +174,11 @@ definitions:
         type: string
       hotel_name:
         type: string
-      hotel_rating:
-        type: string
       id:
         type: integer
       number_of_rooms:
         type: integer
-      owner_id:
+      user_id:
         type: integer
     type: object
   models.LoginRequest:
@@ -231,25 +192,6 @@ definitions:
     required:
     - email
     - password
-    type: object
-  models.Owner:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      first_name:
-        type: string
-      id:
-        type: integer
-      last_name:
-        type: string
-      password:
-        type: string
-      phone_number:
-        type: string
-      username:
-        type: string
     type: object
   models.RegisterRequest:
     properties:
@@ -288,11 +230,7 @@ definitions:
         type: integer
       number_of_room:
         type: integer
-      price:
-        type: number
       room_image_url:
-        type: string
-      sleeps:
         type: string
       status:
         type: string
@@ -321,6 +259,8 @@ definitions:
       password:
         type: string
       phone_number:
+        type: string
+      type:
         type: string
       username:
         type: string
@@ -819,152 +759,6 @@ paths:
       summary: Update a hotel
       tags:
       - hotel
-  /owner/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete an owner
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ResponseOK'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: Delete an owner
-      tags:
-      - owner
-  /owners:
-    get:
-      consumes:
-      - application/json
-      description: Get all owners
-      parameters:
-      - default: 10
-        in: query
-        name: limit
-        required: true
-        type: integer
-      - default: 1
-        in: query
-        name: page
-        required: true
-        type: integer
-      - in: query
-        name: search
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.GetAllOwnersResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: Get all owners
-      tags:
-      - owner
-    post:
-      consumes:
-      - application/json
-      description: Create an owner
-      parameters:
-      - description: Owner
-        in: body
-        name: owner
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateOwnerRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.Owner'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: Create an owner
-      tags:
-      - owner
-  /owners/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get owner by id
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Owner'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: Get owner by id
-      tags:
-      - owner
-    put:
-      consumes:
-      - application/json
-      description: Update an owner
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Owner
-        in: body
-        name: owner
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateOwnerRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Owner'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: Update an owner
-      tags:
-      - owner
   /room/{id}:
     delete:
       consumes:
@@ -1195,6 +989,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a user
       tags:
       - user
