# api/models/booking.go
@@ -3,21 +3,23 @@ package models
 import "time"
 
 type Booking struct {
-	ID            int64     `json:"id"`
-	RoomId        int       `json:"room_id"`
-	UserId        int       `json:"user_id"`
-	Stay          string    `json:"stay"`
-	NumberOfUsers int       `json:"number_of_users"`
-	StayDate      time.Time `json:"stay_date"`
-	CreatedAt     time.Time `json:"created_at"`
+	ID        int64     `json:"id"`
+	RoomId    int       `json:"room_id"`
+	UserId    int       `json:"user_id"`
+	HotelId   int       `json:"hotel_id"`
+	FromDate  string    `json:"from_date"`
+	ToDate    string    `json:"to_date"`
+	Price     float64   `json:"price"`
+	CreatedAt time.Time `json:"created_at"`
 }
 
 type CreateBookingRequest struct {
-	RoomId        int       `json:"room_id"`
-	UserId        int       `json:"user_id"`
-	Stay          string    `json:"stay"`
-	NumberOfUsers int       `json:"number_of_users"`
-	StayDate      time.Time `json:"stay_date"`
+	RoomId   int     `json:"room_id"`
+	UserId   int     `json:"user_id"`
+	HotelId  int     `json:"hotel_id"`
+	FromDate string  `json:"from_date"`
+	ToDate   string  `json:"to_date"`
+	Price    float64 `json:"price"`
 }
 
 type GetAllBookingsResponse struct {
