# api/models/room.go
@@ -6,9 +6,7 @@ type Room struct {
 	ID           int64     `json:"id"`
 	Type         string    `json:"type"`
 	NumberOfRoom int       `json:"number_of_room"`
-	Sleeps       string    `json:"sleeps"`
 	RoomImageUrl *string   `json:"room_image_url"`
-	Price        float64   `json:"price"`
 	Status       string    `json:"status"`
 	HotelId      int       `json:"hotel_id"`
 	CreatedAt    time.Time `json:"created_at"`
@@ -17,9 +15,7 @@ type Room struct {
 type CreateRoomRequest struct {
 	Type         string  `json:"type"`
 	NumberOfRoom int     `json:"number_of_room"`
-	Sleeps       string  `json:"sleeps"`
 	RoomImageUrl *string `json:"room_image_url"`
-	Price        float64 `json:"price"`
 	Status       string  `json:"status"`
 	HotelId      int     `json:"hotel_id"`
 }
